--- a/EDA-notebook.ipynb
+++ b/EDA-notebook.ipynb
@@ -15,7 +15,17 @@
     }
    ],
    "source": [
-    "print('hello')"
+    "print('hello')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d9cd81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
    ]
   }
  ],
